fix <NavDrawer /> z-index

--- a/components/layout/theme.css
+++ b/components/layout/theme.css
@@ -36,7 +36,7 @@
 
 .sidebarDrawer,
 .navDrawerDrawer {
-  z-index: var(--z-index-high);
+  z-index: var(--z-index-highest);
 
   &.pinned {
     box-shadow: none;
